--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
 	<div class="container">
-	<a href="https://www.iriss.org.uk/"><img alt="Iriss" src="http://gccgritting.iriss.org.uk.s3-website-eu-west-1.amazonaws.com/iriss-logo.png"></a>
+	<a href="https://www.iriss.org.uk/"><img alt="Iriss" src="iriss-logo.png"></a>
 		<h1>Glasgow Gritting</h1>
 
 		<p class="lead text-info">Apologies, the Glasgow Gritting online tracking service has now ended.</p>
